# aoc-cpp-template

./: .clang-format  .clang-format-ignore  .env.example  .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: check_format.sh  generate_day.sh
scripts/templates/day/: CMakeLists.txt.template  input.txt.template  input_test.txt.template  solution.cpp.template  solution.h.template  test.cpp.template
src/common/: input_fetcher.cpp  input_fetcher.h  utils.cpp  utils.h
